--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -52,42 +52,45 @@
                 <p class="sp_title"><%= link_to storepromotion.sp_title, storepromotion %></p>
                 <!-- <p><%= storepromotion.sp_description %></p> -->
                 <!-- <em>End Date: <%= storepromotion.sp_end_date %></em> -->
-                <div class="promocode_m">
-                  <% if storepromotion.sp_promocode.present? %>
-                    <div class="text_copied store_code">
-                      <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= storepromotion.sp_promocode %></p></div></div></div>
-                    </div>
-                    <em class="code_em">
-                      <% if storepromotion.sp_spare_60 && (storepromotion.sp_spare_60 < DateTime.now) %>
-                      <% storepromotion.sp_spare_60 %>
-                        <em class="expired code_em">* This Promo Code has EXPIRED.</em>
-                      <% else %>
-                        <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
-                        <% storepromotion.sp_spare_61 %>
-                          <em class="code_em endtoday">* This coupon expires today.</em>
+                <% if storepromotion.sp_end_date.present? %>
+                  <div class="promocode_m">
+                    <% if storepromotion.sp_promocode.present? %>
+                      <div class="text_copied store_code">
+                        <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= storepromotion.sp_promocode %></p></div></div></div>
+                      </div>
+                      <em class="code_em">
+                        <% if storepromotion.sp_spare_60 && (storepromotion.sp_spare_60 < DateTime.now) %>
+                        <% storepromotion.sp_spare_60 %>
+                          <em class="expired code_em">* This Promo Code has EXPIRED.</em>
                         <% else %>
-                          <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
-                          <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                          <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
+                          <% storepromotion.sp_spare_61 %>
+                            <em class="code_em endtoday">* This coupon expires today.</em>
+                          <% else %>
+                            <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
+                            <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                          <% end %>
                         <% end %>
-                      <% end %>
-                    </em>
-                  <% else %>
-                    <em class="code_em">
-                      <% if storepromotion.sp_spare_60 && (storepromotion.sp_spare_60 < DateTime.now) %>
-                      <% storepromotion.sp_spare_60 %>
-                        <em class="expired code_em">* This offer has EXPIRED.</em>
-                      <% else %>
-                        <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
-                        <% storepromotion.sp_spare_61 %>
-                         <em class="code_em">* This offer expires today.</em>
+                      </em>
+                    <% else %>
+                      <em class="code_em">
+                        <% if storepromotion.sp_spare_60 && (storepromotion.sp_spare_60 < DateTime.now) %>
+                        <% storepromotion.sp_spare_60 %>
+                          <em class="expired code_em">* This offer has EXPIRED.</em>
                         <% else %>
-                         <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
-                         <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                          <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
+                          <% storepromotion.sp_spare_61 %>
+                           <em class="code_em">* This offer expires today.</em>
+                          <% else %>
+                           <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
+                           <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                          <% end %>
                         <% end %>
-                      <% end %>
-                    </em>
-                  <% end %>
-                </div>
+                      </em>
+                    <% end %>
+                  </div><!--./promocode_m-->
+                <% end %>
+
                 
                 <% if can? :update, storepromotion %>
                   <div class="admin">
