--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -9,7 +9,7 @@
         
         <!-- <p>Location Map</p> -->
         <div class="show_img hotdeal_img">
-          <div class="img_box">
+          <div class="img_box store_promotion">
             <img src="<%= @storepromotion.sp_image %>"> 
           </div>
           <% if can? :update, @storepromotion %>
@@ -25,13 +25,19 @@
          <div class="hotdeal_inner">
            <p><%= @storepromotion.sp_store_name %> | Up to <%= number_to_percentage(@storepromotion.sp_percentage_01, precision: 0) %> OFF</p>
            <h2><%= @storepromotion.sp_title %></h2>
-
-           <div class="trix"><p class="sp_des"><%= @storepromotion.sp_description.html_safe %></p></div>
+           <div class="store_info">
+            <% if @storepromotion.sp_promocode.present? %>
+              <em>* Enter the promotional code "<%= @storepromotion.sp_promocode %>" at checkout to receive your savings.</em>
+            <% end %>
+           </div>
+           <% if @storepromotion.sp_description.present? %>
+             <div class="trix"><p class="sp_des"><%= @storepromotion.sp_description.html_safe %></p></div>
+           <% end %>
 
              <% if @storepromotion.sp_end_date.present? %>
                <% if @storepromotion.sp_promocode.present? %>
                   <div class="extra_info">
-                    <em>* Pricing may change and deals can expire fast.</em>
+                    <!-- <em>* Pricing may change and deals can expire fast.</em> -->
                     <em class="code_em">
                       <% if @storepromotion.sp_spare_60 < DateTime.now %>
                       <% @storepromotion.sp_spare_60 %>
@@ -51,7 +57,7 @@
                   </div>
                 <% else %>
                   <div class="extra_info">  
-                   <em>* Pricing may change and deals can expire fast.</em>
+                   <!-- <em>* Pricing may change and deals can expire fast.</em> -->
                     <% if @storepromotion.sp_spare_60 < DateTime.now %>
                     <% @storepromotion.sp_spare_60 %>
                       <em class="expired">This offer has EXPIRED.</em>
