--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -8,9 +8,9 @@
       <label for="tab1">Amazon Hodeals(KOR)</label>
       <input type="radio" name="tab" id="tab2">
       <label for="tab2">Amazon Hodeals(ENG)</label>
-      <!-- <input type="radio" name="tab" id="tab3">
-      <label for="tab3">Archives</label>
-      <input type="radio" name="tab" id="tab4">
+      <input type="radio" name="tab" id="tab3">
+      <label for="tab3">Naver Blog</label>
+      <!-- <input type="radio" name="tab" id="tab4">
       <label for="tab4">Contact</label> -->
     
       <div class="tab-content-wrapper">
@@ -25,7 +25,7 @@
                   <p><%= promocode.p_title %></p>
                 <% end %>
                 <% if promocode.p_spare_03.present? %>
-                  <p>평균 평점: Avg <%= promocode.p_spare_03 %> rates | 리뷰 수: <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews </p>
+                  <p>평균 평점: Avg <%= promocode.p_spare_03 %> rates | 리뷰 수: <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews <% if promocode.p_spare_02.present? %>| <% promocode.p_spare_02 %>재고가 얼마 남지 않았습니다. <% end %></p>
                 <% end %>
                 <% running_total = 0 %>
                 <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
@@ -44,7 +44,7 @@
                     <p><%= hotdeal.h_title %></p>
                   <% end %>
                   <% if hotdeal.h_spare_08.present? %>
-                    <p>평균 평점: Avg <%= hotdeal.h_spare_08 %> rates | 리뷰 수: <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
+                    <p>평균 평점: Avg <%= hotdeal.h_spare_08 %> rates | 리뷰 수: <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews <% if hotdeal.h_spare_07.present? %>| <% hotdeal.h_spare_07 %>재고가 얼마 남지 않았습니다.<% end %> </p>
                   <% end %>
 
                   <% if hotdeal.h_spare_42.present? %>
@@ -70,7 +70,7 @@
                 <div class="all_box clearfix">
                   <p><%= promocode.p_title %></p>
                   <% if promocode.p_spare_03.present? %>
-                    <p>Avg <%= promocode.p_spare_03 %> rates | <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews </p>
+                    <p>Avg <%= promocode.p_spare_03 %> rates | <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews <% if promocode.p_spare_02.present? %>| <%= promocode.p_spare_02 %> <% end %></p>
                   <% end %>
                   <% running_total = 0 %>
                   <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
@@ -87,7 +87,7 @@
                   <div class="all_box clearfix">
                     <p><%= hotdeal.h_title %></p>
                     <% if hotdeal.h_spare_08.present? %>
-                      <p>Avg <%= hotdeal.h_spare_08 %> rates | <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
+                      <p>Avg <%= hotdeal.h_spare_08 %> rates | <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews <% if hotdeal.h_spare_07.present? %>| <%= hotdeal.h_spare_07 %> <% end %></p>
                     <% end %>
                     <% if hotdeal.h_spare_42.present? %>
                       <p class="h_price"><%= number_to_currency(hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
@@ -105,37 +105,54 @@
         </div><!--#/tab-content-2-->
 
         <div id="tab-content-3" class="tab-content">
-        </div>
+          <div class="for_sns">
+            <% @hotdeals.each do |hotdeal| %>
+              <% if hotdeal.h_spare_13.present? %>
+              <% hotdeal.h_spare_13 %>
+                <div class="wrapping">
+                 <div><p class="title"><%= hotdeal.h_title %></p></div>
+                 <div class="image"><img src="<%= hotdeal.h_image %>"></div>
+                 <div class="info">
+                  <% if hotdeal.h_spare_42.present? %>
+                    <p class="h_price"><%= number_to_currency(hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+                  <% else %>
+                    <% running_total = 0 %>
+                    <% running_total =  (hotdeal.h_spare_43 - hotdeal.h_spare_44) / hotdeal.h_spare_43 * 100 %>
+                    <p class="h_price"><%= number_to_currency(hotdeal.h_spare_44) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_43)  %></span><span class="span_02"> | <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
+                  <% end %>
+                  <% if hotdeal.h_spare_08.present? %>
+                    <p class="h_rate">평균 평점: Avg <%= hotdeal.h_spare_08 %> / 5.0 rates | 리뷰 수: <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews <% if hotdeal.h_spare_07.present? %>| <% hotdeal.h_spare_07 %><span class="stock">재고가 얼마 남지 않음.</span></span><% end %></p>
+                  <% end %>
+
+                  <% if hotdeal.h_spare_41.present? %>
+                    <% running_total = 0 %>
+                    <% running_total =  hotdeal.h_spare_41.to_i - hotdeal.h_spare_42.to_i %>
+                    <em class="save_money">* <%= number_to_currency(running_total) %> 이상 절약 할 수 있습니다.</em>
+                   <% else %>
+                    <% running_total = 0 %>
+                    <% running_total =  hotdeal.h_spare_43.to_i - hotdeal.h_spare_44.to_i %>
+                    <em class="save_money">* <%= number_to_currency(running_total) %> 이상 절약 할 수 있습니다.</em>
+                   <% end %>
+
+                   <% if hotdeal.h_spare_02.present? %><em class="coupon">* 쿠폰을 통해 <%= hotdeal.h_spare_02 %> 추가 할인을 받을 수 있습니다.</em><% end %>
+                   <% if hotdeal.h_spare_12.present? %><% hotdeal.h_spare_12 %><em>* 본 상품은 무관세(관세없음) 대상입니다.</em><% end %>
+                   <em>* 가격과 핫딜 프로모션은 업데이트 날짜를 가준으로 변경 될 수 있습니다.</em>
+                   <h4><a href="<%= hotdeal.h_link %>">Check This Deals</a></h4>
+                 </div><!--./info-->
+                </div><!--./wrapping-->
+                <hr>
+              <% end %>
+            <% end %>
+          </div><!--./for_sns-->
+        </div><!--#/tab-content-3-->
+
         <div id="tab-content-4" class="tab-content">
         </div>
       </div>
     </div>
 
-   <!-- <div class="for_sns">
-      <% @hotdeals.each do |hotdeal| %>
-        <div class="wrapping">
-         <div class="image"><img src="<%= hotdeal.h_image %>"></div>
-         <div class="info">
-          <div class="title"><p><%= hotdeal.h_spare_11 %></p></div>
-          <% if hotdeal.h_spare_42.present? %>
-            <p class="h_price"><%= number_to_currency(hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF ) | + 미국내 무료배송( $25 이상 또는 Prime 맴버)</span></p>
-          <% else %>
-            <% running_total = 0 %>
-            <% running_total =  (hotdeal.h_spare_43 - hotdeal.h_spare_44) / hotdeal.h_spare_43 * 100 %>
-            <p class="h_price"><%= number_to_currency(hotdeal.h_spare_43) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_44)  %></span><span class="span_02"> | <%= number_to_percentage(running_total, precision: 0) %> OFF ) | + 미국내 무료배송( $25 이상 또는 Prime 맴버)</span></p>
-          <% end %>
-          <p class="tips">Tips</p>
-          <ul class="tips_ul">
-            <li>* 관부과세: 무관세 대상($200 이하)</li>
-            <li>* 직배송: 가능</li>
-            <li>+ 15% 쿠폰 할인</li>
-          </ul>
-          <h4><a href="<%= hotdeal.h_link %>">Check This Deals</a></h4>
-         </div>
-        </div>
-      <% end %>
-    </div>
-  -->
+    
+
 
 
  </div><!--./wrap-->
