--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -39,6 +39,8 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a{}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a em{font-weight:bold;font-size:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.sp_des{margin:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:14px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .store_info em span{text-transform:uppercase;font-weight:bold;}
 /*.show_wrap .show_box .hotdeal_img{position:relative;}*/
 .trix-container{max-height:250px;overflow:hidden;transition:max-height .5s ease;position:relative;}
 .recommend_trix{max-height:200px;margin-top:20px;border-top:1px solid #ccc;border-bottom:1px solid #ccc;}
@@ -185,7 +187,7 @@
 .text_copied .container .wrap{flex:0 1 37.5rem;margin:5px 0;}
 .text_copied .container .wrap .box{padding:10px;background-color:#fff;border:0.0625rem solid #607d8b;border-radius:0.1875rem;}
 .text_copied .container .wrap .box:not(:last-child){margin-bottom:1.5625rem;}
-.text_copied .container .wrap .box p{margin:0;font-size:15px;}
+.text_copied .container .wrap .box p{margin:0;font-size:15px;text-transform:uppercase;}
 [data-copy-text] + i.material-icons{transition:all 0.25s ease-in-out;position:absolute;top:0;right:0;padding:10px;color:#000;opacity:0.5;cursor:pointer;z-index:1;font-family:'Righteous', cursive;font-style:normal;}
 [data-copy-text] + i.material-icons:hover,
 [data-copy-text] + i.material-icons.active{background-color:#000;opacity:1;color:#fff;}
