--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -44,12 +44,24 @@
 
         <!-- <p class="mobile_code"><span>Take <strong><%= promocode.p_percentage %>% off at $<%= promocode.p_list_price %></strong> with promo code: <strong class="m_codes"><%= promocode.p_promocode %></strong></span></p>-->
 
-        <% if promocode.p_spare_51 && (promocode.p_spare_51 <= DateTime.now) %>
-        <% promocode.p_spare_51 %>  
-          <span class="ex_date endtoday">* This Promo Code expires today.</span>
+        <% if promocode.p_spare_50.present? %>
+          <% if promocode.p_spare_50 < DateTime.now %>
+          <% promocode.p_spare_50 %>
+            <em class="expired">* This promo code has EXPIRED.</em>
+          <% else %>
+
+          <% if promocode.p_spare_51.present? %>
+            <% if promocode.p_spare_51 && (promocode.p_spare_51 <= DateTime.now) %>
+            <% promocode.p_spare_51 %>  
+              <span class="ex_date endtoday">* This Promo Code expires today.</span>
+            <% else %>
+              <span class="ex_date ex_date_new">* Expiration Date : <%= promocode.p_end_date %></span>
+            <% end %>
+           <% end %>
+          <% end %>
         <% else %>
           <span class="ex_date ex_date_new">* Expiration Date : <%= promocode.p_end_date %></span>
-        <% end %>
+        <% end %>                    
 
         <em>* Pricing may change and promotional codes can expire fast.</em>
         <em>* Click and copy this code then apply it at your checkout</em>
