--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -717,7 +717,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .for_sns{width:500px;}
 .for_sns .wrapping{margin-bottom:30px;}
 .for_sns .wrapping .image{width:350px;height:350px;}
-.for_sns .wrapping .image img{width:100%;height:100%;padding:30px;}
+.for_sns .wrapping .image img{width:100%;height:100%;padding:20px;object-fit:contain;}
 .for_sns .wrapping .title{}
 .for_sns .wrapping p.title{font-size:15px;}
 .for_sns .wrapping .info{}
