--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -8,11 +8,12 @@
 .st_warp .st_box{border-bottom:1px solid #ccc;float:left;width:49%;margin:0% 0.5% 1% 0.5%;}
 .st_warp .st_box .st_image{float:left;width:18%;margin:1%;}
 .st_warp .st_box .st_image img{width:100%;height:70px;vertical-align:middle;object-fit:contain;}
-.st_warp .st_box .inner{float:left;width:77%;margin-left:3%;padding:7px 7px 0 0;height:90px;}
+.st_warp .st_box .inner{float:left;width:77%;margin-left:3%;padding:7px 7px 0 0;height:100px;}
 .st_warp .st_box .inner p{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:310px;overflow:hidden;word-break:break-word;font-size:13px;}
 .st_warp .st_box .inner p .st_title{background:yellow;}
 .st_warp .st_box .inner p a{background:#000;padding:0 5px;color:#fff;}
 .st_warp .st_box .inner em{}
+.st_warp .st_box .inner span{margin:5px 0;}
 .st_warp .st_box .inner span, .tab-menu-text-alt p, .deal_text p
 {line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;font-size:13px;}
 .st_warp .st_box .inner span a{color:#616161;}
@@ -23,6 +24,10 @@
 .st_warp .st_box .inner .store_sti .container .wrap .box p{font-size:12px;}
 .st_warp .st_box .inner .store_sti .container .wrap .box [data-copy-text] + i.material-icons{padding:3px;font-size:12px;}
 .st_warp .st_box .inner .store_code{margin:5px 0 3px 0;color:#616161;}
+.st_warp .st_box .inner .date_info{}
+.st_warp .st_box .inner .date_info em{font-size:13px;color:#616161;}
+.st_warp .st_box .inner .date_info em.expired{color:red;}
+.st_warp .st_box .inner .date_info em.endtoday{color:#ffa500;}
 .st_warp .st_middle{margin-top:30px;}
 .st_warp .st_middle .deals_card{width:18%;}
 .st_warp .st_middle .st_middle_box{margin-bottom:30px;}
@@ -68,12 +73,13 @@
 
 .sp_wrap .sp_left .sp_menu{}
 .sp_wrap .sp_left .sp_menu ul{}
-.sp_wrap .sp_left .sp_menu ul li{margin-bottom:5px;background:#08f;padding:5px 15px;border-radius:15px;}
+.sp_wrap .sp_left .sp_menu ul li{margin-bottom:5px;padding:5px 15px;border-radius:15px;border:1px solid #ccc;}
 .sp_wrap .sp_left .sp_menu ul li.admin{background:#000;}
-.sp_wrap .sp_left .sp_menu ul li a{color:#fff;font-size:15px;display:block;}
-.sp_wrap .sp_left .sp_menu .show-more-height{height:371px;overflow:hidden;}
+.sp_wrap .sp_left .sp_menu ul li.admin a{color:#fff;}
+.sp_wrap .sp_left .sp_menu ul li a{color:#000;font-size:15px;display:block;}
+.sp_wrap .sp_left .sp_menu .show-more-height{height:387px;overflow:hidden;}
 .sp_wrap .sp_left .sp_menu .store_search input{width:100%;padding:10px;border-radius:10px;border:1px solid #ccc;margin-bottom:5px;}
-.sp_wrap .sp_left .sp_menu button{background:#ccc;padding:5px 15px;margin-bottom:5px;border-radius:15px;width:100%;font-size:15px;color:#fff;}
+.sp_wrap .sp_left .sp_menu button{background:#616161;padding:5px 15px;margin-bottom:5px;border-radius:15px;width:100%;font-size:15px;color:#fff;}
 .sp_wrap .sp_left .show-more{text-align:center;background:#000;color:#fff;padding:5px 10px;border-radius:15px;}
 /* Mobile Menu */
 .featured .sp_m{width:100%;}
@@ -82,36 +88,41 @@
 .featured .sm_mobile ul.sp_ul li a{color:#fff;font-size:40px;text-transform:uppercase;}
 .featured .sm_mobile .store_search input{padding:10px;width:80%;margin-bottom:5px;}
 
-.sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;padding:20px 0;}
-.sp_wrap .sp_right .sp_card .admin{font-size:12px;}
-.sp_wrap .sp_right .sp_image{float:left;width:15%;height:104.39px;position:relative;}
+.sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;float:left;width:48%;margin:1%;height:140px;position:relative;}
+.sp_wrap .sp_right .sp_card .admin{font-size:12px;position:absolute;bottom:0;}
+.sp_wrap .sp_right .sp_image{float:left;width:15%;height:100px;position:relative;}
 .sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
-.sp_wrap .sp_right .inner{float:left;width:59%;margin:0 3%;}
-.sp_wrap .sp_right .inner .sp_title{margin:5px 0;font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
-.sp_wrap .sp_right .inner .sp_title a{color:#000;}
+.sp_wrap .sp_right .inner{float:left;width:80%;margin-left:5%;}
+.sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
+.sp_wrap .sp_right .inner .sp_title a{color:#616161;}
 .sp_wrap .sp_right .inner .sp_code{margin-bottom:5px;}
 .sp_wrap .sp_right .inner em{font-size:12px;color:#616161;}
-.sp_wrap .sp_right .inner em.code_em{display:block;/*margin:-5px 0 0 1px;*/}
-.sp_wrap .sp_right .inner em.expired{color:#ff0000;}
-.sp_wrap .sp_right .inner em.endtoday{color:#ffa500;}
-.sp_wrap .sp_right .inner .store_code{width:95%;}
+.sp_wrap .sp_right .inner em.code_em{display:block;}
+.sp_wrap .sp_right .inner em.em_box{margin-top:10px;}
+.sp_wrap .sp_right .inner em.expired{color:#fff;font-size:25px;background:red;text-align:center;border-radius:10px;}
+.sp_wrap .sp_right .inner em.endtoday{color:#fff;font-size:25px;background:#ffa500;text-align:center;border-radius:10px;}
+.sp_wrap .sp_right .inner .store_code .container .wrap .box{padding:5px;}
+.sp_wrap .sp_right .inner .store_code .container .wrap .box p{font-size:12px;letter-spacing:3px;}
+.sp_wrap .sp_right .inner .store_code .container .wrap .box [data-copy-text] + i.material-icons{padding:5px;font-size:12px;}
 /*.sp_wrap .sp_right .inner .btn{margin-top:10px;}
 .sp_wrap .sp_right .inner .btn a{text-decoration:none;background:#000;color:#fff;padding:5px 20px;border-radius:10px;}*/
 .sp_wrap .sp_right .sp_btn_m{display:none;}
-.sp_wrap .sp_right .sp_btn{float:left;width:20%;position:relative;height:104.39px;}
+.sp_wrap .sp_right .sp_btn{float:left;width:20%;position:relative;height:104.39px;display:none;}
 .sp_wrap .sp_right .sp_btn a{text-decoration:none;background:#000;color:#fff;padding:20px;border-radius:10px;display:block;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:100%;}
 
 @media screen and (max-width:640px){
   .sp_wrap{margin:0;}
   .sp_wrap .sp_left{display:none;}
   .sp_wrap .sp_right{float:none;width:100%;}
-  .sp_wrap .sp_right .sp_card{float:left;width:48%;margin:1%;box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);padding: 5px 10px 10px 10px;}
+  .sp_wrap .sp_right .sp_card{float:left;width:48%;margin:1%;box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);padding: 5px 10px 10px 10px;height:220px;}
   .sp_wrap .sp_right .sp_image{float:none;width:100%;}
-  .sp_wrap .sp_right .sp_image img{height:100%;object-fit:contain;}
-  .sp_wrap .sp_right .inner{float:none;width:100%;}
+  .sp_wrap .sp_right .sp_image img{height:70%;object-fit:contain;}
+  .sp_wrap .sp_right .inner{float:none;width:100%;margin:0;}
   .sp_wrap .sp_right .inner .sp_title{font-size:12px;}
   .sp_wrap .sp_right .inner em{font-size:10px;}
-  .sp_wrap .sp_right .inner em.code_em{margin-top:16px;}
+  /*.sp_wrap .sp_right .inner em.code_em{margin-top:16px;}*/
+  .sp_wrap .sp_right .inner em.expired{font-size:12px;padding:0 3px;}
+  .sp_wrap .sp_right .inner em.endtoday{font-size:12px;padding:0 3px;}
   .sp_wrap .sp_right .inner span{display:none;}
   .sp_wrap .sp_right .inner .promocode_m{display:none;}
   .sp_wrap .sp_right .sp_btn{display:none;}
@@ -122,8 +133,11 @@
   .sp_wrap{margin:0;}
   .sp_wrap .sp_left .sp_menu ul li a{font-size:12px;}
   .sp_wrap .sp_right .inner .sp_title{font-size:15px;}
+  .sp_wrap .sp_right .sp_card{float:none;width:100%;margin:0;height:140px;padding:10px 0;}
+  .sp_wrap .sp_right .inner em.expired{color:red;font-size:15px;background:none;text-align:left;}
+.sp_wrap .sp_right .inner em.endtoday{color:#ffa500;font-size:15px;background:none;text-align:left;}
   .sp_wrap .sp_right .sp_btn a{padding:10px;font-size:11px;text-align:center;}
-  .sp_wrap .sp_left .sp_menu .show-more-height{height:333px;}
+  .sp_wrap .sp_left .sp_menu .show-more-height{height:350px;}
   .sp_wrap .sp_left .sp_menu button{font-size:11px;}
 }
 
