--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -96,11 +96,13 @@
 .sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
 .sp_wrap .sp_right .inner .sp_title a{color:#616161;}
 .sp_wrap .sp_right .inner .sp_code{margin-bottom:5px;}
+.sp_wrap .sp_right .inner .h_price{}
+.sp_wrap .sp_right .inner .h_price .span_01{text-decoration:line-through;color:#616161;}
 .sp_wrap .sp_right .inner em{font-size:12px;color:#616161;}
 .sp_wrap .sp_right .inner em.code_em{display:block;}
 .sp_wrap .sp_right .inner em.em_box{margin-top:10px;}
-.sp_wrap .sp_right .inner em.expired{color:#fff;font-size:25px;background:red;text-align:center;border-radius:10px;}
-.sp_wrap .sp_right .inner em.endtoday{color:#fff;font-size:25px;background:#ffa500;text-align:center;border-radius:10px;}
+.sp_wrap .sp_right .inner em.expired{color:#fff;font-size:15px;background:red;text-align:center;border-radius:10px;}
+.sp_wrap .sp_right .inner em.endtoday{color:#fff;font-size:15px;background:#ffa500;text-align:center;border-radius:10px;}
 .sp_wrap .sp_right .inner .store_code .container .wrap .box{padding:5px;}
 .sp_wrap .sp_right .inner .store_code .container .wrap .box p{font-size:12px;letter-spacing:3px;}
 .sp_wrap .sp_right .inner .store_code .container .wrap .box [data-copy-text] + i.material-icons{padding:5px;font-size:12px;}
