--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -93,6 +93,7 @@
              <% end %>
              <% if @hotdeal.h_spare_01.present? %><em class="extra_dh">+ Get <%= @hotdeal.h_spare_01 %>% Off Extra Deal</em><% end %>
              <% if @hotdeal.h_spare_02.present? %><em class="extra_dh">+ Clip the <%= @hotdeal.h_spare_02 %> Off Coupon</em><% end %>
+             <% if @hotdeal.h_spare_14.present? %><em>+ Find more <a href="<%= @hotdeal.h_spare_15 %>">"<%= @hotdeal.h_spare_14 %>"</a></em><% end %>
             </div>
 
             <div class="btn">
