--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -39,7 +39,8 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a{}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a em{font-weight:bold;font-size:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.sp_des{margin:0;}
-.show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:14px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .store_info{margin-top:10px;line-height:1.1;}
+.show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:12.5px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info em span{text-transform:uppercase;font-weight:bold;}
 /*.show_wrap .show_box .hotdeal_img{position:relative;}*/
 .trix-container{max-height:250px;overflow:hidden;transition:max-height .5s ease;position:relative;}
