--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -15,17 +15,11 @@
 .st_warp .st_box .inner em{}
 .st_warp .st_box .inner span{margin:5px 0;}
 .st_warp .st_box .inner span, .tab-menu-text-alt p, .deal_text p
-{line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;font-size:13px;}
-.st_warp .st_box .inner span a{color:#616161;}
-.st_warp .st_box .inner span.no_code{font-size:12px;color:#616161;}
-.st_warp .st_box .inner .store_sti{}
-.st_warp .st_box .inner .store_sti .container .wrap{margin:0;}
-.st_warp .st_box .inner .store_sti .container .wrap .box{padding:3px;width:90%;margin-left:4%;border:1px dotted;}
-.st_warp .st_box .inner .store_sti .container .wrap .box p{font-size:12px;}
-.st_warp .st_box .inner .store_sti .container .wrap .box [data-copy-text] + i.material-icons{padding:3px;font-size:12px;}
-.st_warp .st_box .inner .store_code{margin:5px 0 3px 0;color:#616161;}
+{line-height:1.4;height:1.4em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:1;font-size:13px;}
+.st_warp .st_box .inner span a{color:#616161;display:block;}
+.st_warp .st_box .inner .pricing .span_01{color:#616161;text-decoration:line-through;}
 .st_warp .st_box .inner .date_info{}
-.st_warp .st_box .inner .date_info em{font-size:13px;color:#616161;}
+.st_warp .st_box .inner .date_info em{font-size:12px;color:#616161;}
 .st_warp .st_box .inner .date_info em.expired{color:red;}
 .st_warp .st_box .inner .date_info em.endtoday{color:#ffa500;}
 .st_warp .st_middle{margin-top:30px;}
@@ -49,6 +43,7 @@
 .tab-menu-text-alt p a{display:block;color:#616161;}
 .tab-menu-text-alt span{font-size:17px;margin-top:-10px;display:block;}
 .tab-menu-text-alt span em{text-decoration:line-through;color:#616161;margin-right:1px;font-size:13px;}
+.tab-menu-text-alt .span_01{color:#616161;text-decoration:line-through;}
 .all-show a{float:right;padding:10px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;text-transform:uppercase}
 
 @media screen and (max-width:640px){
@@ -88,13 +83,13 @@
 .featured .sm_mobile ul.sp_ul li a{color:#fff;font-size:40px;text-transform:uppercase;}
 .featured .sm_mobile .store_search input{padding:10px;width:80%;margin-bottom:5px;}
 
-.sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;float:left;width:48%;margin:1%;height:140px;position:relative;}
+.sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;float:left;width:48%;margin:1%;height:125px;position:relative;}
 .sp_wrap .sp_right .sp_card .admin{font-size:12px;position:absolute;bottom:0;}
 .sp_wrap .sp_right .sp_image{float:left;width:15%;height:100px;position:relative;}
 .sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
 .sp_wrap .sp_right .inner{float:left;width:80%;margin-left:5%;}
-.sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
-.sp_wrap .sp_right .inner .sp_title a{color:#616161;}
+.sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:1.4em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:1}
+.sp_wrap .sp_right .inner .sp_title a{color:#616161;display:block;}
 .sp_wrap .sp_right .inner .sp_code{margin-bottom:5px;}
 .sp_wrap .sp_right .inner .h_price{}
 .sp_wrap .sp_right .inner .h_price .span_01{text-decoration:line-through;color:#616161;}
