--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -74,6 +74,7 @@
             
             <% if @promocode.p_extra_deal.present? %><em class="extra_dh">+ Get <%= @promocode.p_extra_deal %>% Off Extra Deal</em><% end %>
             <% if @promocode.p_coupon_deal.present? %><em class="extra_dh">+ Clip the <%= @promocode.p_coupon_deal %> Off Coupon</em><% end %>
+            <% if @promocode.p_spare_07.present? %><em>+ Find more <a href="<%= @promocode.p_spare_08 %>">"<%= @promocode.p_spare_07 %>"</a></em><% end %>
 
             <% if @promocode.p_spare_50.present? %>
               <% if @promocode.p_spare_50 < DateTime.now %>
