--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -9,15 +9,16 @@
     <%= f.select :h_spare_07, options_for_select([["In Stock", ""], "Only in a few stock left"])%>
     <%= f.select :h_spare_10, options_for_select([["Subscribe & Save?", ""], "Yes"])%>
     <%= f.select :h_spare_12, options_for_select([["No Tax?", ""], "Yes"])%>
-    <%= f.select :h_spare_13, options_for_select([["Write Blog?", ""], "Yes"])%><br /><br />
+    <%= f.select :h_spare_13, options_for_select([["Write Blog?", ""], "Yes"])%>
+    <div class="form_btn"><%= f.button :submit %></div><br /><br />
     <%= f.input :h_image, label: 'Image URL' %>
     <%= f.input :h_link, label: 'Product URL' %>
     <%= f.input :h_title , label: 'Title Of Product' %>
     <%= f.input :h_spare_04, label: 'Image_Title' %>
-    <%= f.input :h_spare_14, label: 'Amazon Choice' %>
-    <%= f.input :h_spare_15, label: 'Amazon Choice Link' %>
     <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under $ ' %>
     <%= f.input :h_spare_05, label: 'Hashtags' %>
+    <%= f.input :h_spare_14, label: 'Amazon Choice' %>
+    <%= f.input :h_spare_15, label: 'Amazon Choice Link' %>
     <%= f.input :h_spare_11, label: 'Korean Title' %>
     <div class="pricing clearfix">
       <%= f.input :h_spare_41, label: 'Original Price' %>
